# readalyse-frontend/src/app/data-access/api/model/models.ts
@@ -11,6 +11,7 @@ export * from './language';
 export * from './languageList';
 export * from './pagination';
 export * from './person';
+export * from './readabilityScores';
 export * from './readingStatus';
 export * from './registerRequest';
 export * from './resource';
